...
        Row(verticalAlignment = Alignment.CenterVertically) {
            trailing?.invoke()
            OnBackgroundIconButton(
                imageVector = SettingsIcon,
                contentDescription = "Settings",
                onClick = onOpenSettings,
                modifier = Modifier.testTag("gameSettingsButton"),
            )
            TextButton(
                onClick = onMenu,
                colors = ButtonDefaults.textButtonColors(contentColor = MaterialTheme.colorScheme.onBackground),
                modifier = Modifier.testTag("menuButton"),
            ) { Text("Menu") }
...
